環境構築系を追加

--- a/160919_docker_install_mac.ipynb
+++ b/160919_docker_install_mac.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 計算機環境の整備\n",
+    "# docker環境の整備\n",
     "---\n",
     "私は自宅でmacを使用しているのでbrewを使ってそのままpython環境(jupyterやpip)をインストールしていますが，winではjupyterが使えるのか使えないのかよくわからない(自宅はwinが無い)ですし，パッケージのインストールが大変そう。**docker**を使ってその中で環境を整えれば統一した環境を作りやすいとのことなので（I-MS談），試みます。そして，書き足していきます。\n",
     "\n",
