--- a/161005_GPU technological conference.ipynb
+++ b/161005_GPU technological conference.ipynb
@@ -33,7 +33,7 @@
     "---\n",
     "発表者：NVIDIA共同創業者CEO jen-Hsun-Huang\n",
     "会場人数：７人×12列×8ブロックが超満員(立ち見・サテライト会場あり)   \n",
-    "VIP人数:Press約50人, 文部科学省9人, 経済産業省3人, 産業総合1人\n"
+    "VIP人数:Press約50人, 文部科学省9人, 経済産業省3人, 産業総合1人"
    ]
   },
   {
@@ -395,8 +395,141 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "x**5 + 5*x**4*y + 10*x**3*y**2 + 10*x**2*y**3 + 5*x*y**4 + y**5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sympy import *\n",
+    "matplotlib inline\n",
+    "x, y = symbols(\"x y\")\n",
+    "\n",
+    "expr = (x + y)**5\n",
+    "expand(expr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sympy.interactive import printing\n",
+    "printing.init_printing(use_latex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n",
+      "/opt/conda/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAEoAAAAaCAYAAAAQXsqGAAAABHNCSVQICAgIfAhkiAAAAstJREFU\nWIXt2FuoVVUUxvFfYl7zKCZkiShHBEXMS+AlI3wwCElQUBGfxB5CESSMQEIQIsJTKVjYS1BQYKFF\nCFHggxgECpG3JxUMH4LoioHHY9qxhzE3e55d1Flr7YvK/sNk7TH2XN+cY655GWvRZVg8UOHepXgS\nE7ECr+LrZnSqQ7QknofwemZvRD+mVRXuEC2L53EMYlaye3AnNXAv8r/xjCwpfAHLcSXZ09P1ckm9\nMizDC7iBsam8lvpWlLbF8yHearbof7AIxzAm8x3CH1jYBP2WxLMVfaodDEU5IJbGhsz3XPIdrKj9\nr/GMqCi6Ol1fxmjMrKg3XM6I2XMt801I1/4Kui2J52k8j6mprBXrvFO8gdtYUPL+QvE8Iab1fnyG\nydiNffhI/VToFU/0TkPpKdnJqszCz9jW4O/FO/gCmxv+24WPs3rDjmc23lZfmx/gkkjCVojjc1fZ\nSFrEWtHnS+KBNu6T72IUduJ8w3/n8EmZRg9hfGYfwen0ezrexMNlhNvAKJzAN+p9fEp9Fn2Jo1n9\nSfgL28s0NqPB/kHkJc1igdiEzw6zvF9Qf6VYLkeSPVVsyNPEoKzL6q5JdecVD2Moc5PQqqpCLWKO\nyKZzatn0oHglqfGiOB1HZ74+sadVTml24CbGZb7eqqJNokdk47fVDxdi26htwhMz/1f4vEHjFD4t\n0mgtjxorRnl+sp8Rm19/Vu+lIsIt5E/x6vU9fs/8c9P1W0Pzqxm4mNnjsRgnizRae9dbLQbiO9wS\nsydv7BWR1t8NDIic6SdDB2onrvtninBVpDk1+vCgggNVW6NTksCvyd4rTsEB8QSP4XgR4TawBc+K\nJfgIfsMekSrkzMF74oAYEN+d5omYB9vU13uOEfhR8RP1vuewoYnmOjGrZnemO3cvv4jMHR4T35s2\nlRFq56eRTrAeS8SSe1QM2qmO9qhLly5dWsDfCmKbh9lIgyIAAAAASUVORK5CYII=\n",
+      "text/latex": [
+       "$$x^{2} - 3 y^{2}$$"
+      ],
+      "text/plain": [
+       " 2      2\n",
+       "x  - 3⋅y "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x ** 2 - 3 * y ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAADwAAAARCAYAAACBzs+aAAAABHNCSVQICAgIfAhkiAAAAqtJREFU\nWIXt1U2Il1UUBvCfmWOi1KhtQmSyzBSRwUIXOVNYTlBQbYohCEUMBDdquTBa1EJdRImSzTpwoWEr\niwhalNEnBUqLFqVhpuaEmoKmpn0sznntdvsL/p1hJJhn89577rnP+5x7zj2XUVw17sRRdF1vIe3g\nhiHsfQxTMDhMWkYEQwm4F1/i/DBpGREMJeAefDxcQkYKY1rYHsQq/IDJ2IOVIqP9WJ72hfgUZ/AO\n3rhKjgZPYAm6sUxcj6dyrQeb8F7hPxZ9eD/n9+IZ/IXb8Wz+oxPT8BIO4G5cyvF/sALHk0BuPIu9\nld9KXMCEa+TowJYcf4VP8Lx/ErAehyrepzEpx3fh9cL/TXyH+7AIfyZfg+UtdOrGRXFqJQ5jc2Xb\nmSKvlaMPT6bgE3i78n9BHFKJ54rxACYW812in8B0vIqpxXov5tdi38WvGFfYukTJPF75HsPGmqAN\njttEdXTnWk/FsxOfFfOJWFtxljhyBT0NJovKu4xOUedvVY7L8EeuN5ibIh+ufNvhaLBGZLKjsI3D\nKZHlBtPEHW2FOalnyRXW4caGr+nSM0VT+LxyfAD7UsCMtC0WgTUZ6BRl1A5Hg8Wi8f1e2B7BzdiR\nfF2iaiZpjYdyf1kRd1Q+t4irczng0/ktG8X4JNuT86YJ9GYAZ3K+WhxAOxwymPvxYSVuadoOiqzd\ng98KrRPwCublvA/fpE8T07qKsxtflAHvzyCakxmLbeJUD+BWnCzWDuZ4Ac7h5zY5iCbSiY8qcbOw\nW5Rhv+gL8AtuwqMZ0FzMzv9dKPa/iO0V5wxxKP96h2eKp+L7/NlAilqBH8UdGBSnNSBKdxCviWeg\nHQ6iiW0QGbxU6OgX9/4nbMW3ae8Q7/vXIsMn0v5y/ue8KO3d+KDgmyV6SMt3eBSj+J/jb/u7pOPc\nPqJZAAAAAElFTkSuQmCC\n",
+      "text/latex": [
+       "$$\\operatorname{atan}{\\left (x \\right )}$$"
+      ],
+      "text/plain": [
+       "atan(x)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "integrate(1/(1+x**2), x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAV4AAAAlCAYAAAAKuYGsAAAABHNCSVQICAgIfAhkiAAACcpJREFU\neJztnXuMXFUdxz/b7UPsdlu1pbRokQUEAmWDlUqh3Qo0qGDlESkE2gpUqkjSICQYEpRRkEaqaFBj\nwDRWVxDQlKgFoq3SKgbdAuUhPlvYVERBREqxdLF1/eN7J3P3zsy9Z+Y+Z/b3SSaz9+y59/xm7nfO\n6/c754JhGIaRKR110qcEjncBwynb0mp0AvvzNiJnxiBdmDZGF6Z9N+2/GRjvO94DvBF20b3AQ75X\nVzwb247jgNvzNqIAHAt8k/oNuNF+mPaFi/ZvoFKH7gQujrroYAKGtSszgZ9jjVGZi4Cb8jbCyATT\n/kga0X4Jq3ibpgN4ADgxb0MKxr1AX95GGKli2q+Nq/ZL+CresSkZ065cCLwA/CZvQxx5L3ASMBk4\nGQ19fplCOVcBG4BeYF8K1zfyx7Rfm0S1Pxj3Am3IWOBPwNF5G+JIF7Dad7wETe4fnFJ5/cCKlK5t\n5ItpPxwX7ZewqYamOBfYlLcRDXAc8D/gMO+4G3lgl6RU3lzg9yld28gX0344Ltov4at4x6RkSDty\nCXBP3kY0wFPAPOAZ7/gd3vtfUipvADgADfGyZi6wHs1BPgWsJb3ezWjEtB9OYtofjG1Ke9GF4u8O\nytuQGPQDX065jFuBNTHOH9fEOe8GfkYl9rwLzeW9CLwzhi2GMO27EaX9EjbV0DCLge15GxGDS4Gb\nST/e9jzgiRjnf4vGe6r3AYcH0o5HQ8u7YthiCNO+G1HaL2FTDQ1zMhpOtCJneO/XABNItxc4gObX\nups8fxyN93oXAr8ADvSlbQNeARY1aYdRwbTvRkPat4rXjV7gj3kb0QR9wAzgfjRU/IB3nBY7gdeR\nALPiWWA6MDGQPoTm3Yx4mPbdaEj7RYrjPRX4JJoQfwuwBfg4sKBG3tnA1cCr6MMOoRUke315jvLy\n/Af1oqYCVwJ/9+WZBXwGhZq87p2/xjvHz5HA95v+ZPnQg+ILJwXSJ6dY5jAS4FFomWQWnIg+4z98\naTNRZbzZlzYJuA04B3hTnWsNox70rxK3MhpX/SelfXDTv2nfjUS0P5iUNY6sAF6iMhQ4GN38bTXy\nLgGeRy0x6IeyGzjLl+csJLL3+NI+BTxCpZd/APBn9EWBQk9eAs6uUebewPWN+gwA1zd57jqSGQ7e\nhDZxOck77kBRD9cD70cV8MfQVMQGNCRdBMwnn1Ggq/6T0j6469+0706Y9ksUzLnWC/wXWBpIfw64\nJZB2PGrhl/vSPgw8CrzdO56NWu9LA+fOQa3SPN95r6AdhADeBlxH9ZC1HAN4qtOnMTYB32jy3HXE\nr3h7UGV0oy9tOfBB3/EP0A5bAD+JWV5cXPWfpPbL50bp37TfGGHaL5HAkuFe9CNx9RRuQ7GAtfgC\n8Bpwty/tENTqbw7kvRktW7zDl/Zj71VmDWq5vxs4tzzpPQt4GIluMor5ux/FKd5INWVh7q5jf5Ak\nv5tW5FWi51a/Q6XX5mcWismttXXeClTJhDEBuBNFR1znS/drYQrS/X50b6dFXDNtXPWfpPbBTf+m\n/cZw0X4og8nYEckUtL757kD6R9EPw78v8DS0GiWsNzU1JM+nUes9N5D2HJV9Na+ocd4s73/HhJRr\nVOhnZOXQCOuI1+PtBz4fkecK5OUGxQD/OkZ5cXHVfxraL6eH6d+03xhh2i9RoHCyw9GQ7+FA+kLg\ncdQqH+ql9aCW9JGQ6x0Wkmc5sAPY6kv7IhqmHYvmZ2pVvEPee9Ye8uGCv+pRDrjPmhKas/ysL215\njXyXAQ96f89AFVZeuOo/De1DtP5N+ylpP++Kd5f3vtOXNgE4DXl1Qd5Z0EokqD3sORQ4MyTP6WiD\nj1Xoi1sPPOn7/9OotXqGavZ4783GpjZLR8Ff9eim8p1lxVKk5RsC6fMDx31oGP+Yd9yNenW1ohyO\nrJOeJK76T1L74K5/035K2s+74t2OWvYe77gT+DpqOXag3sjL3v+eRUtDg3tfLkC9nM118vSgOb9V\naC4L5PH1b/pxINr2rtYwdTfy7AZDU/Kmi+LZBBLfi5G5kqMP+Aq6z9/zve6i+vu5GthI5bE1z6PK\nNeg8OgXFrjY7ZeKKq/6T1D6469+03xjO2s87jncYLbX7KnImjEWe3AeRM2UOcK0v//noR7YWCXI8\nWqa3As1vBfPsQd7aJcBvfddZhoZzq9ENnIjiHOut0Pkb2bf6YZyJHCn3oCF2kehG31dW3Au8FT0N\nIEjQWdQLrPQdbwP+SnUv5gXkpJqTkI31aET/SWkfGtO/ad+d2NofTMaOtmEDI+cOi8DnKJ7wxqBw\nplqLXlxYR7E2tinlbUABMO27EaX9EgVyrrUKT1AJNC8KYZP8rnQyMr61Hu+iMhwO4xA0dH8yKmMd\nbiXb3nIUE/I2oAC0q/bBTf+paD/vqYZW4SHS20S5Hp1oyegJ6GmmA8gDfSfVc319aJ5yBxLJFiox\noGejcKAh5DB6FInpKjQ0LS8giCrvEmo7H/2cgOJCd0Xkq8dj0Vky4xSi44ZHA0XXPsTXf+bat4rX\njS3oRhzEyD0B0uQctMJqARp+DyBvd7BHeAQKri8/hLADVWDnobnA29HeBfuQw+hrwLe9vDOpeMGj\nytuOVk/VWsZdZj5y8LQ6Y1E0wLVRGUcBRdY+JKP/j0SUl7j2barBjT3o6QaLMyxzI4oJXIT2nAV4\nH5UwozLLGPnYkWH0fKxlSET7qDyE72XU6g8hh8p+33lR5f0OLTgIYzHww4g8rcA+rNItU2TtQzL6\nz1z7VvG6sxa4IMPydqH5py1UdotaSLX4JlEd4D4Oeb2fRstRp3vHU6kMwaYwMuYzqrzdjNzzNshc\nFHrUKk+hNdwpqvYhGf1nrn2reN15AN3ALJdPzkTzVqCWeiLwh0CefrTyqHwvx6DNUu5ALfsmNOy6\nDA3h/unl+zeKh3QtbzLwrxBbVwFfcvhMRutRVO1DcvovhPYHk7hIG3IuCs7Pih4Ur3gh8CMqDxw8\nAy0N3er9fToK+VmJguBP813jPiSgx9EPaBWVuNUrHcvDu2a9TZ57UO/CfAbtS1G1D8noP23tlyjY\ntpCtxnqql6JmwUYcblyAC5D3thP1BGaglUzne/+/iPrr8IPlrayTD7RD1sIGbTNaj1bSPjSv/zS0\nX8Iq3lhMA35K+qt5jkFe1Q703KutNP48stVU/1CWAp/w/h4PfMihvKOpfqBkmYvRxuNG+9NK2gd3\n/Weh/RK+irfehg9voJ2eyszDfU/O0cARqCW9PMUypqPdorYjYZT3Wm2ELhSf+BryTk9CLf9taPPt\nuOXN9s65nOSC2o1i0yraB3f9p6X9W9A0CMg5dw1anWkYhmEYhmEYhmEYhmEYhmG0MP8HFqU7QyfZ\n9WYAAAAASUVORK5CYII=\n",
+      "text/latex": [
+       "$$\\left [ - \\operatorname{acos}{\\left (- \\frac{2}{y \\log{\\left (y \\right )}} \\right )} + 2 \\pi, \\quad \\operatorname{acos}{\\left (- \\frac{2}{y \\log{\\left (y \\right )}} \\right )}\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡      ⎛  -2    ⎞            ⎛  -2    ⎞⎤\n",
+       "⎢- acos⎜────────⎟ + 2⋅π, acos⎜────────⎟⎥\n",
+       "⎣      ⎝y⋅log(y)⎠            ⎝y⋅log(y)⎠⎦"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr = cos(x) * ln(y) + 2/y\n",
+    "solve(expr, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
